correct style selectors for search autocomplete modal (#143)
Due to some new class names and selectors Slack introduced, much of the
back and foreground colors in the search modal didn't fit with the
theme.

This commit adds some additional selectors on existing theme styles and
introduces one small new color change for text elements in the search
autocomplete results because slack expanded their hierarchy here.

Test Plan:
- Focus the search box in the top-right of Slack
- Verify that the background of each component in the modal follows the
  theme, and that things look generally better

--- a/scss/modules/menu/_autocomplete.scss
+++ b/scss/modules/menu/_autocomplete.scss
@@ -36,7 +36,8 @@
     border-bottom: 1px solid $color-shade-dark;
   }
 
-  &.search_menu {
+  &.search_menu,
+  &.search_menu.unified {
     .section_header::before {
       background-color: $color-shade-light;
     }
@@ -86,9 +87,12 @@
       }
     }
 
-    &:not(.keyboard_active) li {
+    &:not(.keyboard_active) li,
+    .results.unified:not(.keyboard_active) li {
       &:focus,
       &:hover {
+        background: transparent;
+
         .muted_text {
           color: $color-highlight;
         }
@@ -130,12 +134,21 @@
       color: $base-font-color;
     }
 
+    .results.unified {
+      .unified_autocomplete_item {
+        .text {
+          color: $base-font-color;
+        }
+      }
+    }
+
     .action_btn,
     .modifier_icon {
       color: $color-highlight;
     }
 
-    footer {
+    footer,
+    footer.unified {
       .keyword::before,
       .modifier::before {
         background: $color-shade-lightest;
