--- a/scss/modules/pages/admin/_base.scss
+++ b/scss/modules/pages/admin/_base.scss
@@ -44,7 +44,8 @@ header {
   }
 }
 
-footer {
+footer,
+#autocomplete_menu.search_menu footer.unified {
   background-color: $color-shade-dark;
   border-color: $color-shade-darkest;
   color: $base-font-color;
